2003-08-10  Derek Atkins  <derek@ihtfp.com>

	* src/backend/file/sixtp.c: Add code to read XML files with real
	  namespace declarations.  (see bug #88078)

	* src/*/Makefile.am: Make sure we define PWD, as not all shells
	  define it properly.  Fixes #119114.

	* src/gnome/reconcile-list.c: our parent is a gnc-query-list, not
	  a clist.  Fix a bug so we properly call the parent destroy function.

2003-08-08  Matt Vanecek  <mevanecek@yahoo.com>

    * src/backend/postgres/PostgresBackend.c: Changed all the
      gncEntry references to gncSplit, and entryGuid to splitGuid.
    - pgend_session_begin(): Changed the 2nd qof_backend_set_message()
      message argument to the internationalization format.
    - Changed the pgendUpgradeDB() call to come after a commit--the
      upgrade process uses its own transaction handling (now).
      
    * src/backend/postgres/checkpoint.c:
    * src/backend/postgres/gncquery.c:
    * src/backend/postgres/gncquery.h:
    * src/backend/postgres/txn.c:
    * src/backend/postgres/txnmass.c:
    * src/backend/postgres/events.c: Changed all the gncEntry
      references to gncSplit, and entryGuid to splitGuid.
      
    * src/backend/postgres/functions.sql: Changed the TIMESTAMP args
      to TIMESTAMP WITH TIME ZONE args, and gncEntry args to gncSplit.
    
    * src/backend/postgres/putil.c: Added the execQuery() function
    - sendQuery(): Added internationalization to the
      qof_backend_set_message() call.

    * src/backend/postgres/putil.h: Added the execQuery() prototype.
    
    * src/backend/postgres/table-create.sql:
    * src/backend/postgres/table-audit.sql: Changed all the TIMESTAMP
      types to TIMESTAMP WITH TIME ZONE.  Change all the gncEntry refs
      to gncSplit, and entryGuid to splitGuid.
    - Grouped all the index creates at the end for readability and
      maintenance ease.

    * src/backend/postgres/table-version.sql: Added a new insert row for
      the gncVersion table to reflect these changes.
